# replinet_demo

./: .env.example  .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  README.md  docker-compose.yml
backend/: Dockerfile  init.sql  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: agents.py  auth.py
backend/app/core/: config.py  deps.py  redis.py  security.py
backend/app/crud/: agent.py  base.py  preset.py  user.py
backend/app/db/: session.py
backend/app/models/: agent.py  base.py  preset.py  user.py
backend/app/schemas/: agent.py  user.py
backend/app/services/: browser_manager.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py
frontend/: Dockerfile  components.d.ts  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  env.d.ts  main.ts  shims-vue.d.ts
frontend/src/components/common/: AppLoader.vue  ConfirmDialog.vue  DataTable.vue  EmptyState.vue  FormField.vue  JsonEditor.vue  PageHeader.vue  StatusBadge.vue  UserAvatar.vue  index.ts
frontend/src/components/common/LogViewer/: LogEntry.vue  index.ts  index.vue
frontend/src/plugins/: webfontloader.ts
frontend/src/router/: index.ts
frontend/src/stores/: app.ts  auth.ts
frontend/src/styles/: app.scss  variables.scss
frontend/src/types/: models.ts
frontend/src/utils/: api.ts  config.ts  formatters.ts  logger.ts  permissions.ts  storage.ts  validation.ts  websocket.ts
frontend/src/views/: Dashboard.vue  NotFound.vue  Profile.vue
frontend/src/views/agents/: AgentDetail.vue  AgentList.vue  CreateAgent.vue
frontend/src/views/auth/: Login.vue  Register.vue
frontend/src/views/presets/: PresetDetail.vue  PresetList.vue
